--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Crypt-Trifid
 
+0.06  Thu Jan 07 12:05:00 2016
+      - Added LICENSE file.
+
 0.05  Sat Mar 07 09:00:00 2015
       - Renamed method generate_charset() to _generate_charset(), just to mark as private.
 
