--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Crypt-Trifid
 
+0.08  Thu Sep 07 12:00:00 2017
+      - Updated copyright year information.
+
 0.07  Thu Mar 31 15:50:00 2016
       - Added unit test scripts (t/meta-json.t and t/meta-yml.t)
       - Added key 'provides' to the Makefile.PL script.
