--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Crypt-Trifid
 
+0.09  Sun Sep 24 12:50:00 2017
+      - Improved method exporting.
+
 0.08  Thu Sep 07 12:00:00 2017
       - Updated copyright year information.
 
